--- a/DreamCakeApi/templates/account/signup.html
+++ b/DreamCakeApi/templates/account/signup.html
@@ -10,13 +10,14 @@
 
 {% comment %} <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p> {% endcomment %}
 
-<form class="signup" id="signup_form" method="post" action="{% fullurl 'account_signup' %}">
+<form class="signup" id="signup_form">
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+  <input type="submit" value="Submit" />
+  {% comment %} <button type="submit">{% trans "Sign Up" %} &raquo;</button> {% endcomment %}
 </form>
 
 {% endblock %}
